JsonXssCleaner.js
JsonXssCleaner = (function(){
  /* Generated by PEG.js 0.6.1 (http://pegjs.majda.cz/). */
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "array": parse_array,
        "digit": parse_digit,
        "hashEntity": parse_hashEntity,
        "hex": parse_hex,
        "number": parse_number,
        "object": parse_object,
        "string": parse_string,
        "value": parse_value,
        "ws": parse_ws
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "value";
      }
      
      var pos = 0;
      var reportMatchFailures = true;
      var rightmostMatchFailuresPos = 0;
      var rightmostMatchFailuresExpected = [];
      var cache = {};
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        
        if (charCode <= 0xFF) {
          var escapeChar = 'x';
          var length = 2;
        } else {
          var escapeChar = 'u';
          var length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function quote(s) {
        /*
         * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
         * string literal except for the closing quote character, backslash,
         * carriage return, line separator, paragraph separator, and line feed.
         * Any character may appear in the form of an escape sequence.
         */
        return '"' + s
          .replace(/\\/g, '\\\\')            // backslash
          .replace(/"/g, '\\"')              // closing quote character
          .replace(/\r/g, '\\r')             // carriage return
          .replace(/\n/g, '\\n')             // line feed
          .replace(/[\x80-\uFFFF]/g, escape) // non-ASCII characters
          + '"';
      }
      
      function matchFailed(failure) {
        if (pos < rightmostMatchFailuresPos) {
          return;
        }
        
        if (pos > rightmostMatchFailuresPos) {
          rightmostMatchFailuresPos = pos;
          rightmostMatchFailuresExpected = [];
        }
        
        rightmostMatchFailuresExpected.push(failure);
      }
      
      function parse_value() {
        var cacheKey = 'value@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        var result10 = parse_string();
        if (result10 !== null) {
          var result2 = result10;
        } else {
          var result9 = parse_number();
          if (result9 !== null) {
            var result2 = result9;
          } else {
            var result8 = parse_object();
            if (result8 !== null) {
              var result2 = result8;
            } else {
              var result7 = parse_array();
              if (result7 !== null) {
                var result2 = result7;
              } else {
                if (input.substr(pos, 4) === "true") {
                  var result6 = "true";
                  pos += 4;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"true\"");
                  }
                }
                if (result6 !== null) {
                  var result2 = result6;
                } else {
                  if (input.substr(pos, 5) === "false") {
                    var result5 = "false";
                    pos += 5;
                  } else {
                    var result5 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"false\"");
                    }
                  }
                  if (result5 !== null) {
                    var result2 = result5;
                  } else {
                    if (input.substr(pos, 4) === "null") {
                      var result4 = "null";
                      pos += 4;
                    } else {
                      var result4 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"null\"");
                      }
                    }
                    if (result4 !== null) {
                      var result2 = result4;
                    } else {
                      var result2 = null;;
                    };
                  };
                };
              };
            };
          };
        }
        if (result2 !== null) {
          var result3 = parse_ws();
          if (result3 !== null) {
            var result1 = [result2, result3];
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(value) { return value })(result1[0])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_object() {
        var cacheKey = 'object@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 1) === "{") {
          var result2 = "{";
          pos += 1;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
            matchFailed("\"{\"");
          }
        }
        if (result2 !== null) {
          var result3 = parse_ws();
          if (result3 !== null) {
            var savedPos1 = pos;
            var result9 = parse_string();
            if (result9 !== null) {
              var result10 = parse_ws();
              if (result10 !== null) {
                if (input.substr(pos, 1) === ":") {
                  var result11 = ":";
                  pos += 1;
                } else {
                  var result11 = null;
                  if (reportMatchFailures) {
                    matchFailed("\":\"");
                  }
                }
                if (result11 !== null) {
                  var result12 = parse_ws();
                  if (result12 !== null) {
                    var result13 = parse_value();
                    if (result13 !== null) {
                      var result14 = [];
                      var savedPos2 = pos;
                      var result17 = parse_ws();
                      if (result17 !== null) {
                        if (input.substr(pos, 1) === ",") {
                          var result18 = ",";
                          pos += 1;
                        } else {
                          var result18 = null;
                          if (reportMatchFailures) {
                            matchFailed("\",\"");
                          }
                        }
                        if (result18 !== null) {
                          var result19 = parse_ws();
                          if (result19 !== null) {
                            var result20 = parse_string();
                            if (result20 !== null) {
                              var result21 = parse_ws();
                              if (result21 !== null) {
                                if (input.substr(pos, 1) === ":") {
                                  var result22 = ":";
                                  pos += 1;
                                } else {
                                  var result22 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\":\"");
                                  }
                                }
                                if (result22 !== null) {
                                  var result23 = parse_ws();
                                  if (result23 !== null) {
                                    var result24 = parse_value();
                                    if (result24 !== null) {
                                      var result16 = [result17, result18, result19, result20, result21, result22, result23, result24];
                                    } else {
                                      var result16 = null;
                                      pos = savedPos2;
                                    }
                                  } else {
                                    var result16 = null;
                                    pos = savedPos2;
                                  }
                                } else {
                                  var result16 = null;
                                  pos = savedPos2;
                                }
                              } else {
                                var result16 = null;
                                pos = savedPos2;
                              }
                            } else {
                              var result16 = null;
                              pos = savedPos2;
                            }
                          } else {
                            var result16 = null;
                            pos = savedPos2;
                          }
                        } else {
                          var result16 = null;
                          pos = savedPos2;
                        }
                      } else {
                        var result16 = null;
                        pos = savedPos2;
                      }
                      var result15 = result16 !== null
                        ? (function(string, value) { return "," + string + ":" + value })(result16[3], result16[7])
                        : null;
                      while (result15 !== null) {
                        result14.push(result15);
                        var savedPos2 = pos;
                        var result17 = parse_ws();
                        if (result17 !== null) {
                          if (input.substr(pos, 1) === ",") {
                            var result18 = ",";
                            pos += 1;
                          } else {
                            var result18 = null;
                            if (reportMatchFailures) {
                              matchFailed("\",\"");
                            }
                          }
                          if (result18 !== null) {
                            var result19 = parse_ws();
                            if (result19 !== null) {
                              var result20 = parse_string();
                              if (result20 !== null) {
                                var result21 = parse_ws();
                                if (result21 !== null) {
                                  if (input.substr(pos, 1) === ":") {
                                    var result22 = ":";
                                    pos += 1;
                                  } else {
                                    var result22 = null;
                                    if (reportMatchFailures) {
                                      matchFailed("\":\"");
                                    }
                                  }
                                  if (result22 !== null) {
                                    var result23 = parse_ws();
                                    if (result23 !== null) {
                                      var result24 = parse_value();
                                      if (result24 !== null) {
                                        var result16 = [result17, result18, result19, result20, result21, result22, result23, result24];
                                      } else {
                                        var result16 = null;
                                        pos = savedPos2;
                                      }
                                    } else {
                                      var result16 = null;
                                      pos = savedPos2;
                                    }
                                  } else {
                                    var result16 = null;
                                    pos = savedPos2;
                                  }
                                } else {
                                  var result16 = null;
                                  pos = savedPos2;
                                }
                              } else {
                                var result16 = null;
                                pos = savedPos2;
                              }
                            } else {
                              var result16 = null;
                              pos = savedPos2;
                            }
                          } else {
                            var result16 = null;
                            pos = savedPos2;
                          }
                        } else {
                          var result16 = null;
                          pos = savedPos2;
                        }
                        var result15 = result16 !== null
                          ? (function(string, value) { return "," + string + ":" + value })(result16[3], result16[7])
                          : null;
                      }
                      if (result14 !== null) {
                        var result8 = [result9, result10, result11, result12, result13, result14];
                      } else {
                        var result8 = null;
                        pos = savedPos1;
                      }
                    } else {
                      var result8 = null;
                      pos = savedPos1;
                    }
                  } else {
                    var result8 = null;
                    pos = savedPos1;
                  }
                } else {
                  var result8 = null;
                  pos = savedPos1;
                }
              } else {
                var result8 = null;
                pos = savedPos1;
              }
            } else {
              var result8 = null;
              pos = savedPos1;
            }
            var result7 = result8 !== null
              ? (function(string, value, next) { return string + ":" + value + next.join('') })(result8[0], result8[4], result8[5])
              : null;
            var result4 = result7 !== null ? result7 : '';
            if (result4 !== null) {
              var result5 = parse_ws();
              if (result5 !== null) {
                if (input.substr(pos, 1) === "}") {
                  var result6 = "}";
                  pos += 1;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"}\"");
                  }
                }
                if (result6 !== null) {
                  var result1 = [result2, result3, result4, result5, result6];
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(kv) { return "{" + kv + "}" })(result1[2])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_array() {
        var cacheKey = 'array@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 1) === "[") {
          var result2 = "[";
          pos += 1;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
            matchFailed("\"[\"");
          }
        }
        if (result2 !== null) {
          var result3 = parse_ws();
          if (result3 !== null) {
            var savedPos1 = pos;
            var result9 = parse_value();
            if (result9 !== null) {
              var result10 = [];
              var savedPos2 = pos;
              var result13 = parse_ws();
              if (result13 !== null) {
                if (input.substr(pos, 1) === ",") {
                  var result14 = ",";
                  pos += 1;
                } else {
                  var result14 = null;
                  if (reportMatchFailures) {
                    matchFailed("\",\"");
                  }
                }
                if (result14 !== null) {
                  var result15 = parse_ws();
                  if (result15 !== null) {
                    var result16 = parse_value();
                    if (result16 !== null) {
                      var result12 = [result13, result14, result15, result16];
                    } else {
                      var result12 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result12 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result12 = null;
                  pos = savedPos2;
                }
              } else {
                var result12 = null;
                pos = savedPos2;
              }
              var result11 = result12 !== null
                ? (function(value) { return "," + value })(result12[3])
                : null;
              while (result11 !== null) {
                result10.push(result11);
                var savedPos2 = pos;
                var result13 = parse_ws();
                if (result13 !== null) {
                  if (input.substr(pos, 1) === ",") {
                    var result14 = ",";
                    pos += 1;
                  } else {
                    var result14 = null;
                    if (reportMatchFailures) {
                      matchFailed("\",\"");
                    }
                  }
                  if (result14 !== null) {
                    var result15 = parse_ws();
                    if (result15 !== null) {
                      var result16 = parse_value();
                      if (result16 !== null) {
                        var result12 = [result13, result14, result15, result16];
                      } else {
                        var result12 = null;
                        pos = savedPos2;
                      }
                    } else {
                      var result12 = null;
                      pos = savedPos2;
                    }
                  } else {
                    var result12 = null;
                    pos = savedPos2;
                  }
                } else {
                  var result12 = null;
                  pos = savedPos2;
                }
                var result11 = result12 !== null
                  ? (function(value) { return "," + value })(result12[3])
                  : null;
              }
              if (result10 !== null) {
                var result8 = [result9, result10];
              } else {
                var result8 = null;
                pos = savedPos1;
              }
            } else {
              var result8 = null;
              pos = savedPos1;
            }
            var result7 = result8 !== null
              ? (function(value, next) { return value + next.join('') })(result8[0], result8[1])
              : null;
            var result4 = result7 !== null ? result7 : '';
            if (result4 !== null) {
              var result5 = parse_ws();
              if (result5 !== null) {
                if (input.substr(pos, 1) === "]") {
                  var result6 = "]";
                  pos += 1;
                } else {
                  var result6 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"]\"");
                  }
                }
                if (result6 !== null) {
                  var result1 = [result2, result3, result4, result5, result6];
                } else {
                  var result1 = null;
                  pos = savedPos0;
                }
              } else {
                var result1 = null;
                pos = savedPos0;
              }
            } else {
              var result1 = null;
              pos = savedPos0;
            }
          } else {
            var result1 = null;
            pos = savedPos0;
          }
        } else {
          var result1 = null;
          pos = savedPos0;
        }
        var result0 = result1 !== null
          ? (function(elements) { return "[" + elements + "]" })(result1[2])
          : null;
        
        
        
        cache[cacheKey] = {
          nextPos: pos,
          result:  result0
        };
        return result0;
      }
      
      function parse_string() {
        var cacheKey = 'string@' + pos;
        var cachedResult = cache[cacheKey];
        if (cachedResult) {
          pos = cachedResult.nextPos;
          return cachedResult.result;
        }
        
        
        var savedPos0 = pos;
        if (input.substr(pos, 1) === "\"") {
          var result2 = "\"";
          pos += 1;
        } else {
          var result2 = null;
          if (reportMatchFailures) {
            matchFailed("\"\\\"\"");
          }
        }
        if (result2 !== null) {
          var result3 = [];
          var result47 = parse_hashEntity();
          if (result47 !== null) {
            var result5 = result47;
          } else {
            if (input.substr(pos).match(/^[^"\\'`<>]/) !== null) {
              var result46 = input.charAt(pos);
              pos++;
            } else {
              var result46 = null;
              if (reportMatchFailures) {
                matchFailed("[^\"\\\\'`<>]");
              }
            }
            if (result46 !== null) {
              var result5 = result46;
            } else {
              if (input.substr(pos, 1) === "<") {
                var result45 = "<";
                pos += 1;
              } else {
                var result45 = null;
                if (reportMatchFailures) {
                  matchFailed("\"<\"");
                }
              }
              if (result45 !== null) {
                var result43 = result45;
              } else {
                if (input.substr(pos, 1) === "<") {
                  var result44 = "<";
                  pos += 1;
                } else {
                  var result44 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"<\"");
                  }
                }
                if (result44 !== null) {
                  var result43 = result44;
                } else {
                  var result43 = null;;
                };
              }
              var result42 = result43 !== null
                ? (function() { return "&lt;" })()
                : null;
              if (result42 !== null) {
                var result5 = result42;
              } else {
                if (input.substr(pos, 1) === ">") {
                  var result41 = ">";
                  pos += 1;
                } else {
                  var result41 = null;
                  if (reportMatchFailures) {
                    matchFailed("\">\"");
                  }
                }
                if (result41 !== null) {
                  var result39 = result41;
                } else {
                  if (input.substr(pos, 1) === ">") {
                    var result40 = ">";
                    pos += 1;
                  } else {
                    var result40 = null;
                    if (reportMatchFailures) {
                      matchFailed("\">\"");
                    }
                  }
                  if (result40 !== null) {
                    var result39 = result40;
                  } else {
                    var result39 = null;;
                  };
                }
                var result38 = result39 !== null
                  ? (function() { return "&gt;" })()
                  : null;
                if (result38 !== null) {
                  var result5 = result38;
                } else {
                  if (input.substr(pos, 1) === "'") {
                    var result37 = "'";
                    pos += 1;
                  } else {
                    var result37 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"'\"");
                    }
                  }
                  if (result37 !== null) {
                    var result35 = result37;
                  } else {
                    if (input.substr(pos, 1) === "'") {
                      var result36 = "'";
                      pos += 1;
                    } else {
                      var result36 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"'\"");
                      }
                    }
                    if (result36 !== null) {
                      var result35 = result36;
                    } else {
                      var result35 = null;;
                    };
                  }
                  var result34 = result35 !== null
                    ? (function() { return "&apos;" })()
                    : null;
                  if (result34 !== null) {
                    var result5 = result34;
                  } else {
                    if (input.substr(pos, 1) === "`") {
                      var result33 = "`";
                      pos += 1;
                    } else {
                      var result33 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"`\"");
                      }
                    }
                    if (result33 !== null) {
                      var result31 = result33;
                    } else {
                      if (input.substr(pos, 1) === "`") {
                        var result32 = "`";
                        pos += 1;
                      } else {
                        var result32 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"`\"");
                        }
                      }
                      if (result32 !== null) {
                        var result31 = result32;
                      } else {
                        var result31 = null;;
                      };
                    }
                    var result30 = result31 !== null
                      ? (function() { return "&#96;" })()
                      : null;
                    if (result30 !== null) {
                      var result5 = result30;
                    } else {
                      if (input.substr(pos, 2) === "\\\"") {
                        var result29 = "\\\"";
                        pos += 2;
                      } else {
                        var result29 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"\\\\\\\"\"");
                        }
                      }
                      if (result29 !== null) {
                        var result27 = result29;
                      } else {
                        if (input.substr(pos, 2) === "\\\"") {
                          var result28 = "\\\"";
                          pos += 2;
                        } else {
                          var result28 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"\\\\\\\"\"");
                          }
                        }
                        if (result28 !== null) {
                          var result27 = result28;
                        } else {
                          var result27 = null;;
                        };
                      }
                      var result26 = result27 !== null
                        ? (function() { return "&quot;" })()
                        : null;
                      if (result26 !== null) {
                        var result5 = result26;
                      } else {
                        var savedPos3 = pos;
                        if (input.substr(pos, 1) === "\\") {
                          var result17 = "\\";
                          pos += 1;
                        } else {
                          var result17 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"\\\\\"");
                          }
                        }
                        if (result17 !== null) {
                          if (input.substr(pos, 1) === "\\") {
                            var result25 = "\\";
                            pos += 1;
                          } else {
                            var result25 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"\\\\\"");
                            }
                          }
                          if (result25 !== null) {
                            var result18 = result25;
                          } else {
                            if (input.substr(pos, 1) === "/") {
                              var result24 = "/";
                              pos += 1;
                            } else {
                              var result24 = null;
                              if (reportMatchFailures) {
                                matchFailed("\"/\"");
                              }
                            }
                            if (result24 !== null) {
                              var result18 = result24;
                            } else {
                              if (input.substr(pos, 1) === "b") {
                                var result23 = "b";
                                pos += 1;
                              } else {
                                var result23 = null;
                                if (reportMatchFailures) {
                                  matchFailed("\"b\"");
                                }
                              }
                              if (result23 !== null) {
                                var result18 = result23;
                              } else {
                                if (input.substr(pos, 1) === "f") {
                                  var result22 = "f";
                                  pos += 1;
                                } else {
                                  var result22 = null;
                                  if (reportMatchFailures) {
                                    matchFailed("\"f\"");
                                  }
                                }
                                if (result22 !== null) {
                                  var result18 = result22;
                                } else {
                                  if (input.substr(pos, 1) === "n") {
                                    var result21 = "n";
                                    pos += 1;
                                  } else {
                                    var result21 = null;
                                    if (reportMatchFailures) {
                                      matchFailed("\"n\"");
                                    }
                                  }
                                  if (result21 !== null) {
                                    var result18 = result21;
                                  } else {
                                    if (input.substr(pos, 1) === "r") {
                                      var result20 = "r";
                                      pos += 1;
                                    } else {
                                      var result20 = null;
                                      if (reportMatchFailures) {
                                        matchFailed("\"r\"");
                                      }
                                    }
                                    if (result20 !== null) {
                                      var result18 = result20;
                                    } else {
                                      if (input.substr(pos, 1) === "t") {
                                        var result19 = "t";
                                        pos += 1;
                                      } else {
                                        var result19 = null;
                                        if (reportMatchFailures) {
                                          matchFailed("\"t\"");
                                        }
                                      }
                                      if (result19 !== null) {
                                        var result18 = result19;
                                      } else {
                                        var result18 = null;;
                                      };
                                    };
                                  };
                                };
                              };
                            };
                          }
                          if (result18 !== null) {
                            var result16 = [result17, result18];
                          } else {
                            var result16 = null;
                            pos = savedPos3;
                          }
                        } else {
                          var result16 = null;
                          pos = savedPos3;
                        }
                        var result15 = result16 !== null
                          ? (function(c) { return '\\' + c })(result16[1])
                          : null;
                        if (result15 !== null) {
                          var result5 = result15;
                        } else {
                          var savedPos1 = pos;
                          if (input.substr(pos, 1) === "\\") {
                            var result8 = "\\";
                            pos += 1;
                          } else {
                            var result8 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"\\\\\"");
                            }
                          }
                          if (result8 !== null) {
                            var savedPos2 = pos;
                            if (input.substr(pos, 1) === "u") {
                              var result10 = "u";
                              pos += 1;
                            } else {
                              var result10 = null;
                              if (reportMatchFailures) {
                                matchFailed("\"u\"");
                              }
                            }
                            if (result10 !== null) {
                              var result11 = parse_hex();
                              if (result11 !== null) {
                                var result12 = parse_hex();
                                if (result12 !== null) {
                                  var result13 = parse_hex();
                                  if (result13 !== null) {
                                    var result14 = parse_hex();
                                    if (result14 !== null) {
                                      var result9 = [result10, result11, result12, result13, result14];
                                    } else {
                                      var result9 = null;
                                      pos = savedPos2;
                                    }
                                  } else {
                                    var result9 = null;
                                    pos = savedPos2;
                                  }
                                } else {
                                  var result9 = null;
                                  pos = savedPos2;
                                }
                              } else {
                                var result9 = null;
                                pos = savedPos2;
                              }
                            } else {
                              var result9 = null;
                              pos = savedPos2;
                            }
                            if (result9 !== null) {
                              var result7 = [result8, result9];
                            } else {
                              var result7 = null;
                              pos = savedPos1;
                            }
                          } else {
                            var result7 = null;
                            pos = savedPos1;
                          }
                          var result6 = result7 !== null
                            ? (function(c) { return '\\' + c.join('') })(result7[1])
                            : null;
                          if (result6 !== null) {
                            var result5 = result6;
                          } else {
                            var result5 = null;;
                          };
                        };
                      };
                    };
                  };
                };
              };
            };
          }
          while (result5 !== null) {
            result3.push(result5);
            var result47 = parse_hashEntity();
            if (result47 !== null) {
              var result5 = result47;
            } else {
              if (input.substr(pos).match(/^[^"\\'`<>]/) !== null) {
                var result46 = input.charAt(pos);
                pos++;
              } else {
                var result46 = null;
                if (reportMatchFailures) {
                  matchFailed("[^\"\\\\'`<>]");
                }
              }
              if (result46 !== null) {
                var result5 = result46;
              } else {
                if (input.substr(pos, 1) === "<") {
                  var result45 = "<";
                  pos += 1;
                } else {
                  var result45 = null;
                  if (reportMatchFailures) {
                    matchFailed("\"<\"");
                  }
                }
                if (result45 !== null) {
                  var result43 = result45;
                } else {
                  if (input.substr(pos, 1) === "<") {
                    var result44 = "<";
                    pos += 1;
                  } else {
                    var result44 = null;
                    if (reportMatchFailures) {
                      matchFailed("\"<\"");
                    }
                  }
                  if (result44 !== null) {
                    var result43 = result44;
                  } else {
                    var result43 = null;;
                  };
                }
                var result42 = result43 !== null
                  ? (function() { return "&lt;" })()
                  : null;
                if (result42 !== null) {
                  var result5 = result42;
                } else {
                  if (input.substr(pos, 1) === ">") {
                    var result41 = ">";
                    pos += 1;
                  } else {
                    var result41 = null;
                    if (reportMatchFailures) {
                      matchFailed("\">\"");
                    }
                  }
                  if (result41 !== null) {
                    var result39 = result41;
                  } else {
                    if (input.substr(pos, 1) === ">") {
                      var result40 = ">";
                      pos += 1;
                    } else {
                      var result40 = null;
                      if (reportMatchFailures) {
                        matchFailed("\">\"");
                      }
                    }
                    if (result40 !== null) {
                      var result39 = result40;
                    } else {
                      var result39 = null;;
                    };
                  }
                  var result38 = result39 !== null
                    ? (function() { return "&gt;" })()
                    : null;
                  if (result38 !== null) {
                    var result5 = result38;
                  } else {
                    if (input.substr(pos, 1) === "'") {
                      var result37 = "'";
                      pos += 1;
                    } else {
                      var result37 = null;
                      if (reportMatchFailures) {
                        matchFailed("\"'\"");
                      }
                    }
                    if (result37 !== null) {
                      var result35 = result37;
                    } else {
                      if (input.substr(pos, 1) === "'") {
                        var result36 = "'";
                        pos += 1;
                      } else {
                        var result36 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"'\"");
                        }
                      }
                      if (result36 !== null) {
                        var result35 = result36;
                      } else {
                        var result35 = null;;
                      };
                    }
                    var result34 = result35 !== null
                      ? (function() { return "&apos;" })()
                      : null;
                    if (result34 !== null) {
                      var result5 = result34;
                    } else {
                      if (input.substr(pos, 1) === "`") {
                        var result33 = "`";
                        pos += 1;
                      } else {
                        var result33 = null;
                        if (reportMatchFailures) {
                          matchFailed("\"`\"");
                        }
                      }
                      if (result33 !== null) {
                        var result31 = result33;
                      } else {
                        if (input.substr(pos, 1) === "`") {
                          var result32 = "`";
                          pos += 1;
                        } else {
                          var result32 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"`\"");
                          }
                        }
                        if (result32 !== null) {
                          var result31 = result32;
                        } else {
                          var result31 = null;;
                        };
                      }
                      var result30 = result31 !== null
                        ? (function() { return "&#96;" })()
                        : null;
                      if (result30 !== null) {
                        var result5 = result30;
                      } else {
                        if (input.substr(pos, 2) === "\\\"") {
                          var result29 = "\\\"";
                          pos += 2;
                        } else {
                          var result29 = null;
                          if (reportMatchFailures) {
                            matchFailed("\"\\\\\\\"\"");
                          }
                        }
                        if (result29 !== null) {
                          var result27 = result29;
                        } else {
                          if (input.substr(pos, 2) === "\\\"") {
                            var result28 = "\\\"";
                            pos += 2;
                          } else {
                            var result28 = null;
                            if (reportMatchFailures) {
                              matchFailed("\"\\\\\\\"\"");
                            }
                          }
                          if (result28 !== null) {
                            var result27 = result28;
                          } else {
                            var result27 = null;;
                          };
                        }
                        var result26 = result27 !== null
                          ? (function() { return "&quot;" })()
                          : null;
                        if (result26 !== null) {
                          var result5 = result26;
                        } else {
                          var savedPos3 = pos;
                          if (input.substr(pos, 1) === "\\") {
                            var result17 = "\\";
